<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/status_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/profile_img_new" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/greetingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greetind_header"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/croped_logo" />

    </LinearLayout>

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="657dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/settings_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/profile_img_new" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/gen_setting_txt"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="564dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="378dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/item_background" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/name_txt"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintHorizontal_bias="0.45"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:inputType="text|textEmailAddress"
                    android:text="@string/email_val"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintHorizontal_bias="0.424"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" />

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:text="@string/full_name_val"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintHorizontal_bias="0.256"
                    app:layout_constraintStart_toEndOf="@+id/imageView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/set_address_txt"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

                <EditText
                    android:id="@+id/editTextText3"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:text="@string/address_val"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintHorizontal_bias="0.256"
                    app:layout_constraintStart_toEndOf="@+id/imageView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView21" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/mobile_no_txt"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

                <EditText
                    android:id="@+id/editTextText4"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:text="@string/mobil_val"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toEndOf="@+id/imageView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/dob_txt"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

                <EditText
                    android:id="@+id/editTextText5"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:inputType="datetime"
                    android:text="@string/dob_val"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView23" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/login_password"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

                <EditText
                    android:id="@+id/editTextText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:inputType="text|textPassword"
                    android:text="Name"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toEndOf="@+id/imageView18"
                    app:layout_constraintTop_toBottomOf="@+id/textView26"
                    app:layout_constraintVertical_bias="0.232" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView20"
                    app:srcCompat="@drawable/atsign" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView23"
                    app:srcCompat="@drawable/birthday" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView21"
                    app:srcCompat="@drawable/mail" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/imageView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView26"
                    app:srcCompat="@drawable/password" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView22"
                    app:srcCompat="@drawable/phone" />

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView19"
                    app:srcCompat="@drawable/user" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/email_address_txt"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:width="200dp"
                android:height="50dp"
                android:backgroundTint="@color/bttn_bg"
                android:paddingTop="10dp"
                android:text="@string/logout_button"
                android:textSize="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>